# yaku

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  EMPEZAR_AQUI.md  LICENSE  README.md  environment-lock.yml  environment.yml  pyproject.toml
.github/workflows/: tests.yml
docs/: Guia_MODFLOW_FloPy_DesdeCero.md  README.md  Tutorial_mfworkflow.docx  Tutorial_yaku.docx  alineacion_sea.md  arquitectura.md  instalacion_arm64.md  preparacion_datos.md  roadmap.md
docs/_tools/: generar_tutorial_docx.py
docs/astm/: etapas.md  mapeo_sea.md
examples/ejemplo_clima/: config.yaml  construir_datos.py  correr_ejemplo.py
examples/ejemplo_clima/datos/fuente/: caudal_rio.csv  caudales.csv  clima.csv  dem.tif  dominio.dbf  dominio.shp  dominio.shx  geologia.dbf  geologia.shp  geologia.shx  observaciones.dbf  observaciones.shp  observaciones.shx  perfil_litologico.csv  pozos.dbf  pozos.shp  (+4 more)
src/mfworkflow/: __init__.py  binaries.py  cli.py  config.py  hidrologia.py  insumos.py  logging_setup.py  tui.py
src/mfworkflow/builder/: __init__.py  model_builder.py
src/mfworkflow/calibration/: __init__.py  evaluate.py  pest_setup.py  predict.py  sensibilidad.py
src/mfworkflow/gis/: __init__.py  export.py  preprocess.py
src/mfworkflow/mesh/: __init__.py  voronoi.py
src/mfworkflow/pathlines/: __init__.py  modpath7.py
src/mfworkflow/prep/: __init__.py  prepare.py  recarga.py  skeletons.py
src/mfworkflow/report/: __init__.py  docx_report.py  entregables.py  indices_clima.py  pdf.py  resultados.py  tema.py
src/mfworkflow/setup/: __init__.py  mfsetup_runner.py  stamp.py
src/mfworkflow/transport/: __init__.py  gwt.py  seawater.py
src/mfworkflow/viz/: __init__.py  plots_3d.py
src/yaku/: __init__.py  cli.py  config.py  hidrologia.py  insumos.py  logging_setup.py  tui.py
src/yaku/builder/: __init__.py  bordes.py  geometria.py  model_builder.py  validation.py
src/yaku/calibration/: __init__.py  caudales.py  evaluate.py  pest_setup.py  pilot_points.py  predict.py  sensibilidad.py
src/yaku/gis/: __init__.py  export.py  preprocess.py
src/yaku/mesh/: __init__.py  voronoi.py
src/yaku/pathlines/: __init__.py  darcy_gradient.py  modpath7.py
src/yaku/prep/: __init__.py  clima_fuentes.py  prepare.py  recarga.py  skeletons.py
src/yaku/report/: __init__.py  _docx_tema.py  docx_report.py  entregables.py  figuras.py  indices_clima.py  pdf.py  resultados.py  tema.py  zonas.py
src/yaku/setup/: __init__.py  mfsetup_runner.py  stamp.py
src/yaku/transport/: __init__.py  gwt.py  seawater.py
src/yaku/viz/: __init__.py  plots_3d.py
templates/insumos_ejemplo/: LEEME.md
templates/proyecto_base/: .gitignore  00_checklist_datos_ASTM.md  README.md  config.yaml
templates/proyecto_base/datos/: README.md
tests/: conftest.py  test_builder.py  test_calibration.py  test_caudales.py  test_cli.py  test_clima_fuentes.py  test_config.py  test_entregables.py  test_geometria.py  test_gis.py  test_hidrologia.py  test_insumos.py  test_mesh.py  test_pathlines.py  test_pilot_points.py  test_predict.py  test_prep.py  test_recarga.py  test_report.py  test_resultados.py  test_tui.py  test_validation.py  test_viz3d.py  test_zonas.py
(+22 files in other folders)
